# sms-modem

./: .gitignore  Cargo.toml  LICENSE  README.md
sms_api/: Cargo.toml
sms_api/src/: alcatel.rs  lib.rs  sms_mock_api.rs  void.rs
sms_cli/: Cargo.toml
sms_cli/src/: args_parser.rs  contacts.rs  groups.rs  lib.rs  main.rs  replace.rs  sms_send.rs  templates.rs
sms_cli/tests/: sms_send_test.rs
sms_config/: Cargo.toml
sms_config/src/: config.rs  lib.rs  main.rs
sms_db/: Cargo.toml
sms_db/src/: contacts.rs  contacts_repo.rs  groups.rs  groups_repo.rs  lib.rs  repository.rs  sms_repository.rs  templates.rs  templates_repo.rs
