[package]
name = "sms_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
sms_mock_api = ["mockito"]

[dependencies]
sms_config = { path = "../sms_config" }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = "0.4.31"
thiserror = "1.0.49"
serde_json = "1"

mockito = { version = "1.2.0", optional = true }
